tests/NormalTests/paczka1/fuzzy1/33789841.err
Error in line 1: BZ0Rt5YeIR3 S92 89,8
Error in line 18: oy7J S92 47,9
